2006-01-01  Harish Krishnaswamy <kharish@novell.com>
	
	* evolution-executive-summary.xml : Remove 
	ui/evolution-executive-summary.xml from CVS.
	Fixes #325120.

2005-12-30  Andre Klapper <a9016009@gmx.de>

	* evolution-calendar.xml:  Fixing several typos and harmonizing
	  capital/small letters. Partially fixes bug 306117.

2005-12-19  Andre Klapper <a9016009@gmx.de>

	* evolution.xml: fixed duplicated mnemonic.
          Fixes bug 319946.

2005-12-31  Harish Krishnaswamy <kharish@novell.com>
	
	* evolution-mail-message.xml : Revert the patch committed
	for shortcut to mark spam (see 2005-12-16 below) 
	as it uses an existing accel.
	
2005-12-23  Srinivasa Ragavan  <sragavan@novell.com>

	** Fixes bug #324677

	* evolution-mail-message.xml: Added Clear and
	Completed flag options to menu.

2005-12-22  M Victor Aloysius J  <victoraloy@gmail.com>

	** Fixes bug #313293

	* evolution.xml: Added Shortcut for preferences.

2005-12-20  Srinivasa Ragavan  <sragavan@novell.com>

	* evolution-mail-message.xml: Reverting David's patch
	for ellipsis, for discussing it again and to close for all
	menu items.

2005-12-20  Srinivasa Ragavan  <sragavan@novell.com>

	* evolution-editor.xml: Added tooltips for Attachment
	* evolution-event-editor.xml: Added tooltips for Alarms

2005-12-19  Chenthill Palanisamy  <pchenthill@novell.com>

	committing for David Trowbridge <trowbrds cs colorado edu>
	
	* evolution-calendar.xml: Removed the Publish FreeBusy menu item.

2005-12-16  Shreyas Srinivasan  <sshreyas@novell.com>

	* evolution-mail-message.xml: Fix #315901, Add shortcut to 
	mark spam. Committed on behalf on Andre Klapper
	
2005-12-16  Srinivasa Ragavan  <sragavan@novell.com>

	** Fixes bugs #322499 and #227853

	* evolution-addressbook.xml: Modified shortcut for preview
	* evolution-mail-global.xml: Modified shortcut for preview
	* evolution-tasks.xml: Modified shortcut for preview
	* evolution.xml: Removed Shortcut to hide status bar.
