@@ -118,14 +118,12 @@
 
   <dockitem name="Toolbar">
 
-    <separator f="" name="emailglobal1"/>
-
     <placeholder name="MailMessageToolbar"/>
 
     <toolitem name="MailStop" verb=""
      _label="Cancel"/>
 
-    <separator f="" name="emailglobal2"/>
+    <separator f="" name="emailglobal1"/>
 
     <placeholder name="MailNextButtons"/>
 
